mariadb-deployment-noneed.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: public.ecr.aws/c0m6s3p2/carmel/k8s-ecr-pub:db
        ports:
          - containerPort: 8080
