ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: carmelwordpress.com
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wordpress
                port:
                  number: 80
